<resources>
    <string name="app_name">SmartWaiter</string>

    <string name="settings_icon">"Settings"</string>

    <!-- Strings related to account creation -->
    <string name="create_account_activity_create_account_title">"Create Account"</string>
    <string name="create_account_activity_login_label">"Login"</string>
    <string name="create_account_activity_username_label">"Username"</string>
    <string name="create_account_activity_password_label">"Password"</string>
    <string name="create_account_activity_personal_details_label">"Welcome to Smart Waiter!!"</string>
    <string name="create_account_activity_personal_details_label_2">Please enter your Personal Details</string>
    <string name="create_account_activity_first_name_label">"First Name"</string>
    <string name="create_account_activity_last_name_label">"Last Name"</string>
    <string name="create_account_activity_address_label">"Address"</string>
    <string name="create_account_activity_postal_code_label">"Postal Code"</string>
    <string name="create_account_activity_phone_number_label">"Phone Number"</string>
    <string name="create_account_activity_create_account_button_label">"Create Account"</string>
    <string name="create_account_activity_create_account_activity_label">AccountCreationActivity</string>

    <!-- Strings related to payment information activity -->
    <string name="get_payment_information_activity_introduction_label">"Please enter the details of the credit card you would like to associate with this account."</string>
    <string name="get_payment_information_activity_title_label">"Credit Card Information"</string>
    <string name="get_payment_information_activity_card_number_label">"Card Number"</string>
    <string name="get_payment_information_activity_name_on_card_label">"Cardholder's Name"</string>
    <string name="get_payment_information_activity_expiration_date_label">"Expiration Date"</string>
    <string name="get_payment_information_activity_cvc_label">"CVC"</string>
    <string name="get_payment_information_activity_finish_label">"Finish"</string>
    <string name="get_payment_information_activity_cancel_label">"Cancel"</string>

    <string-array name="month_array">
        <item>Month</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="year_array">
        <item>Year</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="title_activity_display_categories">DisplayCategoriesActivity</string>
    <string name="title_activity_display_items">DisplayItemsActivity</string>
    <string name="title_activity_get_payment">GetPaymentInformationActivity</string>
    <string name="title_activity_create_account">Create Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_customize_item">CustomizeItemActivity</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="action_cart">Cart</string>
    <string name="title_activity_confirm_order">ConfirmOrderActivity</string>
    <string name="title_activity_custom_toppings">CustomToppingsActivity</string>
    <string name="title_activity_custome_side">CustomeSideActivity</string>
    <string name="title_activity_custom_side">CustomSideActivity</string>
    <string name="title_activity_special_instrunctions">SpecialInstrunctionsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_scan">Scan QR/Barcode</string>
    <string name="intro_text_1">Hey There!!\n Welcome to Smart-Waiter. \n\nWe hope you enjoy your meal and your overall experience with Smart-Waiter.</string>
    <string name="intro_text_2">On the table you\'re seated at, there should be either a QR code or a Barcode:</string>
    <string name="scan_button_text">Scan QR Code</string>
</resources>
