<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginscreen"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context="com.example.pavneetjauhal.smartwaiter.AccountCreationActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#009297"
            android:elevation="4dp"
            android:textColor="#ffff"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/passwordLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/create_account_activity_password_label"
                android:textColor="#FFFFFF"
                android:textSize="11pt" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="350dp"
                android:layout_height="30dp"
                android:background="@drawable/edittextstyle"
                android:inputType="textPassword"
                android:maxLength="5"
                android:textColor="#FFFFFF"
                android:textSize="12pt" />

            <TextView
                android:id="@+id/personalDetailsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/create_account_activity_personal_details_label"
                android:textColor="#FFFFFF"
                android:textSize="12pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/firstNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/create_account_activity_first_name_label"
                android:textColor="#FFFFFF"
                android:textSize="9pt" />

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/edittextstyle"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/lastNameLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/create_account_activity_last_name_label"
                android:textColor="#FFFFFF"
                android:textSize="9pt" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/edittextstyle"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/addressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/create_account_activity_address_label"
                android:textColor="#FFFFFF"
                android:textSize="9pt" />

            <EditText
                android:id="@+id/addressEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/edittextstyle"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/postalCodeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/create_account_activity_postal_code_label"
                android:textColor="#FFFFFF"
                android:textSize="9pt" />

            <EditText
                android:id="@+id/postalCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/edittextstyle"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/phoneNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/create_account_activity_phone_number_label"
                android:textColor="#FFFFFF"
                android:textSize="9pt" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/edittextstyle"
                android:ems="10"
                android:inputType="phone"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittextstyle"
                android:onClick="createAccount"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/create_account_activity_create_account_button_label"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>